# fast_simulator_data

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
kinect/: apple_juice  beer_bottle  chocolate_milk  cif  cleaner  cleaner_cropped  coke  coke2  coke_rwc2013  cookies  crackers  deodorant  drops  energy_drink_cropped  erik  erik-face  face_sjoerd  fanta  fresh_discs  garlic_sauce  loy  loy-face  marmalade  milk  orange_juice  peanut_butter  qr_code  rob  rob-face  rubiks  rwc2014.biscuits  rwc2014.milk  rwc2014.noodles  seven_up  sim-apple  sim-coco_balls  sim-coconut_cereals  sim-egg_stars  sim-lemon  sim-papaya_milk  (+12 more)
laser/: body.pgm  bowl.pgm  trash_bin.pgm
models/: models.xml  table.xml  world.xml
scripts/: convert_worlds_to_yaml.py  spawn_fast_simulator_objects.py  spawn_gazebo_simulator_objects.py  spawn_sdf_test.py
sdf_test/: objects_list_test.yaml  objects_list_test2.yaml  sdf_test01.py
worlds/empty/: pgm  yaml
worlds/reo2016/: objects.yaml  reo2016.py
worlds/rgo2013/: pgm
worlds/rgo2014/: pgm
worlds/rgo2015/: rgo2015.py
worlds/rgo2017/: objects.yaml  rgo2017.py
worlds/rgo2018/: objects.yaml  rgo2018.py
worlds/robotics_testlab_A/: pgm  robotics_testlab_A.py  yaml
worlds/robotics_testlab_B/: objects.yaml  pgm  robotics_testlab_B.py  yaml
worlds/robotics_testlabs/: objects.yaml  robotics_testlabs.py  robotics_testlabs.yaml
worlds/rokus_experiment1/: rokus_experiment1.py
worlds/rokus_experiment3/: rokus_experiment3.py
worlds/rwc2013/: pgm
worlds/rwc2014/: objects.yaml  pgm  pgm02.xcf  rwc2014.py
(+17 files in other folders)
