<?xml version="1.0"?>
<package>
  <name>fast_simulator_data</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.drues@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
