<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fast_simulator_data</name>
  <version>0.0.0</version>
  <description>No description available</description>

  <maintainer email="s.v.d.drues@tue.nl">Sjoerd van den Dries</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>fast_simulator</exec_depend>
  <exec_depend>roslib</exec_depend>

</package>
